# warehouse_management_system

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
wms_frappe/: hooks.py
wms_frappe/config/: desktop.py  docs.py
wms_frappe/warehouse_management/doctype/tracking/: test_tracking.py  tracking.js  tracking.json  tracking.py
wms_frappe/warehouse_management/workspace/warehouse/: warehouse.json
